--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,6 +25,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/p">文本共享</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/task.html">任务列表</a>
+            </li>
         </ul>
     </div>
     <div class="card">
