--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,6 +28,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/task.html">任务列表</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/bookmark.html">书签列表</a>
+            </li>
         </ul>
     </div>
     <div class="card">
