--- a/src/main/resources/static/paste.html
+++ b/src/main/resources/static/paste.html
@@ -30,6 +30,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/task.html">任务列表</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/bookmark.html">书签列表</a>
+            </li>
         </ul>
     </div>
     <router-view></router-view>
