--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>文件列表</title>
+    <title></title>
     <script src="/lib/js/vue.global.js"></script>
+    <script src="/lib/js/vue-router.global.min.js"></script>
     <script src="/lib/js/axios.min.js"></script>
     <script src="/lib/js/qs.min.js"></script>
     <script src="/lib/js/bootstrap.bundle.min.js"></script>
     <script src="/lib/js/js.cookie.min.js"></script>
+    <script src="/lib/js/clipboard.min.js"></script>
     <link href="/lib/css/bootstrap.min.css" rel="stylesheet" />
     <link href="/lib/css/bootstrap-icons.css" rel="stylesheet" />
-    <link href="/css/common.css" rel="stylesheet" />
     <link href="/css/index.css" rel="stylesheet" />
   </head>
 
@@ -20,308 +21,145 @@
       <div class="header">
         <ul class="nav nav-tabs">
           <li class="nav-item">
-            <a class="nav-link active">文件列表</a>
+            <a class="nav-link" href="/files.html">文件列表</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/p">文本共享</a>
+            <a
+              class="nav-link"
+              href="/p"
+              :class="{active: ($route.name == 'pasteList' || $route.name == 'pasteDetail')}"
+              >文本共享</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/task.html">任务列表</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/bookmark.html">书签列表</a>
+            <a class="nav-link" href="/bookmarks.html">书签列表</a>
           </li>
         </ul>
       </div>
-      <div class="card border-bottom-0">
-        <div class="card-header">
-          <ol class="breadcrumb float-start">
-            <li
-              class="filename text-truncate"
-              v-for="directory in directories"
-              :class="['breadcrumb-item', {active: (directory.relativePath == currentDirectory)}]"
-            >
-              <a v-if="directory.relativePath == currentDirectory"
-                >{{directory.displayName}}</a
-              >
-              <a
-                v-else
-                class="link-primary"
-                @click="changeDirectory(directory.relativePath)"
-                >{{directory.displayName}}</a
-              >
-            </li>
-          </ol>
-        </div>
-        <div class="card-body">
-          <form
-            id="form"
-            action="upload"
-            method="post"
-            enctype="multipart/form-data"
-          >
-            <input
-              type="file"
-              name="file"
-              id="file"
-              class="d-none"
-              @change="(event) => upload(event)"
-              multiple
-            />
-            <input
-              type="file"
-              name="folder"
-              id="folder"
-              class="d-none"
-              @change="(event) => upload(event)"
-              multiple
-              webkitdirectory
-            />
-          </form>
-          <div id="left">
-            <button
-              class="btn btn-outline-primary"
-              onclick="document.getElementById('file').value=null; document.getElementById('file').click()"
-            >
-              上传文件
-            </button>
-            <button
-              class="btn btn-outline-primary"
-              class="btn btn-default"
-              onclick="document.getElementById('folder').value=null; document.getElementById('folder').click()"
-            >
-              上传文件夹
-            </button>
-            <button
-              class="btn btn-outline-primary"
-              @click="inputDirectoryName()"
-            >
-              新建文件夹
-            </button>
-            <button class="btn btn-outline-primary" @click="list()">
-              刷新
-            </button>
-            <div class="btn-group">
-              <button
-                class="btn btn-outline-primary"
-                :disabled="files.length === 0"
-                @click="multiSelect = !multiSelect; checkedFiles = []"
-              >
-                多选
-              </button>
-              <button
-                v-if="multiSelect"
-                :disabled="checkedFiles.length == 0"
-                class="btn btn-outline-primary"
-                @click="bulkDownload()"
-              >
-                下载
-              </button>
-              <button
-                v-if="multiSelect"
-                :disabled="checkedFiles.length == 0"
-                class="btn btn-outline-primary"
-                @click="confirmDelete(checkedFiles)"
-              >
-                删除
-              </button>
-            </div>
-          </div>
-          <div id="right">
-            <div class="w-100 d-flex">
-              <input
-                class="form-control"
-                style="flex: 1 1 auto; width: 1%"
-                placeholder="搜索"
-                v-model="filter"
-                @keyup.enter="search()"
-              />
-              <div class="dropdown" style="padding-left: 5px">
-                <button
-                  class="btn btn-outline-primary dropdown-toggle"
-                  data-bs-toggle="dropdown"
-                  data-bs-auto-close="outside"
-                >
-                  <i class="bi bi-grid-3x3-gap-fill"></i>
-                </button>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-item">
-                    <div class="form-check">
-                      <input
-                        class="form-check-input"
-                        type="checkbox"
-                        id="size"
-                        :checked="columns.includes('size')"
-                        @click="hideColumn('size')"
-                      />
-                      <label class="form-check-label" for="size">大小</label>
-                    </div>
-                  </li>
-                  <li class="dropdown-item">
-                    <div class="form-check">
-                      <input
-                        class="form-check-input"
-                        type="checkbox"
-                        id="contentType"
-                        :checked="columns.includes('contentType')"
-                        @click="hideColumn('contentType')"
-                      />
-                      <label class="form-check-label" for="contentType"
-                        >类型</label
-                      >
-                    </div>
-                  </li>
-                  <li class="dropdown-item">
-                    <div class="form-check">
-                      <input
-                        class="form-check-input"
-                        type="checkbox"
-                        id="lastModified"
-                        :checked="columns.includes('lastModified')"
-                        @click="hideColumn('lastModified')"
-                      />
-                      <label class="form-check-label" for="lastModified"
-                        >修改日期</label
-                      >
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <table class="mb-0 table table-hover">
-          <tr>
-            <th
-              class="checkbox"
-              v-if="multiSelect"
-              @click="(event) => event.target === event.currentTarget && event.target.querySelector('.form-check-input').click()"
-            >
-              <input
-                type="checkbox"
-                class="form-check-input"
-                @click="(event) => checkAll(event)"
-                :checked="checkedFiles.length > 0 && files.folders.length + files.files.length > 0"
-                :indeterminate="checkedFiles.length > 0 && checkedFiles.length < files.folders.length + files.files.length"
-                :disabled="files.folders.length + files.files.length == 0"
-              />
-            </th>
-            <th class="filename text-truncate">文件名</th>
-            <th class="size" v-if="columns.includes('size')">大小</th>
-            <th class="contentType" v-if="columns.includes('contentType')">
-              类型
-            </th>
-            <th class="lastModified" v-if="columns.includes('lastModified')">
-              修改时间
-            </th>
-            <th class="action">操作</th>
-          </tr>
-          <tr v-if="currentDirectory != '/'">
-            <td colspan="6" @click="changeDirectory(getParentDirectory)">
-              <a class="link-primary">..</a>
-            </td>
-          </tr>
-          <tr v-for="folder in files.folders">
-            <td
-              class="checkbox"
-              v-show="multiSelect"
-              @click="(event) => event.target === event.currentTarget && event.target.querySelector('.form-check-input').click()"
-            >
-              <input
-                type="checkbox"
-                class="form-check-input"
-                :value="folder.relativePath"
-                v-model="checkedFiles"
-              />
-            </td>
-            <td
-              class="filename text-truncate"
-              @click="changeDirectory(folder.relativePath)"
-            >
-              <i class="bi bi-folder2"></i>&nbsp;
-              <a class="link-primary">{{folder.name}}</a>
-            </td>
-            <td class="size" v-if="columns.includes('size')">-</td>
-            <td class="contentType" v-if="columns.includes('contentType')">
-              -
-            </td>
-            <td class="lastModified" v-if="columns.includes('lastModified')">
-              {{folder.lastModified}}
-            </td>
-            <td class="action">
-              <a class="link-primary" @click="createZip(folder.relativePath)"
-                ><i class="bi bi-cloud-download"></i
-              ></a>
-              <a
-                class="link-danger"
-                @click="confirmDelete([folder.relativePath])"
-                ><i class="bi bi-trash"></i
-              ></a>
-            </td>
-          </tr>
-          <tr v-for="file in files.files">
-            <td
-              class="checkbox"
-              v-show="multiSelect"
-              @click="(event) => event.target === event.currentTarget && event.target.querySelector('.form-check-input').click()"
-            >
-              <input
-                type="checkbox"
-                class="form-check-input"
-                :value="file.relativePath"
-                v-model="checkedFiles"
-              />
-            </td>
-            <td class="filename text-truncate">
-              <i class="bi" :class="getIcon(file.name, file.fileType)"></i
-              >&nbsp; {{file.name}}
-            </td>
-            <td class="size" v-if="columns.includes('size')">
-              {{formatBytes(file.length)}}
-            </td>
-            <td class="contentType" v-if="columns.includes('contentType')">
-              {{file.fileType}}
-            </td>
-            <td class="lastModified" v-if="columns.includes('lastModified')">
-              {{file.lastModified}}
-            </td>
-            <td class="action">
-              <a class="link-primary" @click="download(file.relativePath)"
-                ><i class="bi bi-cloud-download"></i
-              ></a>
-              <a class="link-danger" @click="confirmDelete([file.relativePath])"
-                ><i class="bi bi-trash"></i
-              ></a>
 
-              <div class="dropdown d-inline">
-                <a
-                  class="link-primary"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  <i class="bi bi-three-dots"></i>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a
-                      class="dropdown-item"
-                      v-if="file.fileType.includes('image') || file.fileType.includes('text')"
-                      @click="previewFile(file.fileType, file.relativePath)"
-                      >预览</a
-                    >
-                  </li>
-                  <li>
-                    <a class="dropdown-item" @click="share(file.relativePath)"
-                      >分享</a
-                    >
-                  </li>
-                </ul>
+      <router-view></router-view>
+
+      <template id="paste-list">
+        <input class="form-control mb-2" placeholder="标题" v-model="title" />
+        <textarea
+          class="form-control mb-2"
+          rows="10"
+          placeholder="正文"
+          v-model="text"
+        ></textarea>
+        <button class="btn btn-outline-primary float-end mb-2" @click="add()">
+          发布
+        </button>
+
+        <ul class="list-group" style="clear: both">
+          <li
+            class="list-group-item list-group-item-action cursor-pointer"
+            v-for="paste in pastes"
+            @click="(event) => event.target.tagName !== 'A' && $router.push('/p/' + paste.id)"
+          >
+            <div class="float-end">
+              <a
+                class="link-primary bi bi-clipboard"
+                id="btn-copy"
+                :data-clipboard-text="paste.text"
+              ></a>
+              <a
+                class="link-danger bi bi-trash"
+                @click="$root.showConfirm(() => $root.remove(paste.id))"
+              >
+              </a>
+            </div>
+            <div>
+              <p class="text-primary text-truncate mw-75">{{paste.title}}</p>
+              <p class="text-truncate mw-75">{{paste.text}}</p>
+              <p class="text-muted mb-0">发布于 {{paste.time.slice(0, -3)}}</p>
+            </div>
+          </li>
+        </ul>
+      </template>
+
+      <template id="paste-detail">
+        <div class="card">
+          <div class="card-body border-bottom" style="padding: 0.781rem 1rem">
+            <div
+              class="d-flex justify-content-between flex-wrap align-items-center"
+            >
+              <a class="link-primary" @click="$router.push('/p')">返回</a>
+              <div class="text-muted text-truncate paste-detail-title mw-50">
+                {{title}}
               </div>
+              <div>
+                <a
+                  class="btn btn-outline-primary btn-sm"
+                  id="btn-copy"
+                  data-clipboard-target="#textarea"
+                  >复制</a
+                >
+                <a class="btn btn-outline-primary btn-sm" @click="update()"
+                  >提交修改</a
+                >
+                <a
+                  class="btn btn-outline-danger btn-sm"
+                  @click="$root.showConfirm(() => $root.remove($route.params.id))"
+                  >删除</a
+                >
+              </div>
+            </div>
+          </div>
+          <textarea
+            id="textarea"
+            class="form-control border-0"
+            style="min-height: 75vh"
+            v-model="text"
+          ></textarea>
+        </div>
+      </template>
+
+      <template id="share-list">
+        <table class="table">
+          <tr>
+            <th>分享码</th>
+            <th>文件路径</th>
+            <th>操作</th>
+          </tr>
+          <tr
+            v-for="shareCode in shareCodeList"
+            :class="{'text-danger': !shareCode.valid}"
+          >
+            <td>{{shareCode.code}}</td>
+            <td>{{shareCode.path}}</td>
+            <td>
+              <a
+                v-if="shareCode.valid"
+                class="link-primary me-1"
+                @click="visit(shareCode.code)"
+                >访问</a
+              >
+              <a class="link-danger" @click="remove(shareCode.code)">删除</a>
             </td>
           </tr>
         </table>
-      </div>
+      </template>
+
+      <template id="share-detail">
+        <div class="card">
+          <div class="card-header">文件分享</div>
+          <div class="card-body text-center">
+            文件名：{{file.name}}<br />
+            文件大小：{{file.length}}<br />
+            修改时间：{{file.lastModified}}<br />
+            文件类型：{{file.fileType}}<br />
+            <button
+              class="btn btn-sm btn-outline-primary mt-2"
+              @click="download(file.relativePath)"
+            >
+              下载
+            </button>
+          </div>
+        </div>
+      </template>
     </div>
+
     <div class="modal" tabindex="-1" ref="messageModal">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -344,26 +182,6 @@
         </div>
       </div>
     </div>
-    <div
-      class="modal"
-      tabindex="-1"
-      ref="progressModal"
-      data-bs-backdrop="static"
-      data-bs-keyboard="false"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">上传进度</h5>
-          </div>
-          <div class="modal-body">
-            <div class="progress">
-              <div class="progress-bar" :style="{width: progress}"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <div class="modal" tabindex="-1" ref="confirmModal">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -382,43 +200,7 @@
             <button
               class="btn btn-outline-danger"
               data-bs-dismiss="modal"
-              @click="deleteFile()"
-            >
-              确定
-            </button>
-            <button class="btn btn-outline-primary" data-bs-dismiss="modal">
-              关闭
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="modal" tabindex="-1" ref="inputModal">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">新建文件夹</h5>
-            <button
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <label for="name" class="form-label">输入文件夹名</label>
-            <input
-              class="form-control"
-              id="name"
-              ref="directoryName"
-              @keyup.enter="$refs.btnInput.click()"
-            />
-          </div>
-          <div class="modal-footer">
-            <button
-              class="btn btn-outline-primary"
-              data-bs-dismiss="modal"
-              @click="createDirectory()"
-              ref="btnInput"
+              @click="confirmDelete()"
             >
               确定
             </button>
@@ -468,20 +250,6 @@
     </div>
     <div v-show="loading" class="spinner-border text-primary" role="status">
       <span class="visually-hidden">Loading...</span>
-    </div>
-    <div class="modal" ref="imageModal">
-      <div class="modal-dialog text-center mw-100 h-100">
-        <img
-          id="image"
-          class="shadow"
-          onclick="document.getElementById('image').classList.toggle('mh-100')"
-        />
-      </div>
-    </div>
-    <div class="modal" ref="textModal">
-      <div class="modal-dialog modal-dialog-scrollable mw-100">
-        <div id="text" class="shadow bg-body p-3 font-monospace mh-100"></div>
-      </div>
     </div>
     <script src="/js/index.js"></script>
   </body>
