--- a/src/main/resources/static/files.html
+++ b/src/main/resources/static/files.html
@@ -90,12 +90,25 @@
             </button>
             <button
               class="btn btn-outline-primary"
-              @click="inputDirectoryName()"
+              @click="previousAct=createDirectory;inputDirectoryName('新建文件夹')"
             >
               新建文件夹
             </button>
             <button class="btn btn-outline-primary" @click="list()">
               刷新
+            </button>
+            <!--
+            粘贴按钮显示的条件
+            1、已剪切文件不为空
+            2、已剪切文件所在目录不等于当前目录
+            3、目标目录不能是已剪切文件的子目录
+            -->
+            <button
+              v-if="filesToCut.length !== 0 && getParentDir(filesToCut[0]) !== currentDirectory && !currentDirectory.startsWith(filesToCut[0])"
+              class="btn btn-outline-primary"
+              @click="paste()"
+            >
+              粘贴
             </button>
             <div class="btn-group">
               <button
@@ -120,6 +133,14 @@
                 @click="confirmDelete(checkedFiles)"
               >
                 删除
+              </button>
+              <button
+                v-if="multiSelect"
+                :disabled="checkedFiles.length == 0"
+                class="btn btn-outline-primary"
+                @click="cut(checkedFiles)"
+              >
+                剪切
               </button>
             </div>
           </div>
@@ -197,9 +218,9 @@
                 type="checkbox"
                 class="form-check-input"
                 @click="(event) => checkAll(event)"
-                :checked="checkedFiles.length > 0 && files.folders.length + files.files.length > 0"
-                :indeterminate="checkedFiles.length > 0 && checkedFiles.length < files.folders.length + files.files.length"
-                :disabled="files.folders.length + files.files.length == 0"
+                :checked="Object.keys(files).length>0 && (checkedFiles.length > 0 && files.folders.length + files.files.length > 0)"
+                :indeterminate="Object.keys(files).length>0 && (checkedFiles.length > 0 && checkedFiles.length < files.folders.length + files.files.length)"
+                :disabled="Object.keys(files).length>0 && (files.folders.length + files.files.length == 0)"
               />
             </th>
             <th class="filename text-truncate">文件名</th>
@@ -253,6 +274,29 @@
                 @click="confirmDelete([folder.relativePath])"
                 ><i class="bi bi-trash"></i
               ></a>
+              <div class="dropdown d-inline">
+                <a
+                  class="link-primary"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <i class="bi bi-three-dots"></i>
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" @click="cut([folder.relativePath])"
+                      >剪切</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      @click="previousAct=function() {rename(folder.relativePath)};inputDirectoryName('重命名')"
+                      >重命名</a
+                    >
+                  </li>
+                </ul>
+              </div>
             </td>
           </tr>
           <tr v-for="file in files.files">
@@ -304,6 +348,18 @@
                       v-if="file.fileType.includes('image') || file.fileType.includes('text')"
                       @click="previewFile(file.fileType, file.relativePath)"
                       >预览</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" @click="cut([file.relativePath])"
+                      >剪切</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      @click="previousAct=function() {rename(file.relativePath)};inputDirectoryName('重命名')"
+                      >重命名</a
                     >
                   </li>
                   <li>
@@ -407,7 +463,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">新建文件夹</h5>
+            <h5 class="modal-title" ref="inputModalTitle">新建文件夹</h5>
             <button
               class="btn-close"
               data-bs-dismiss="modal"
@@ -427,7 +483,7 @@
             <button
               class="btn btn-outline-primary"
               data-bs-dismiss="modal"
-              @click="createDirectory()"
+              @click="previousAct()"
               ref="btnInput"
             >
               确定
